# MageGame

./: CMakeLists.txt
FightingGame/: Attack.cpp  Attack.h  CMakeLists.txt  CoreFunctions.cpp  CoreFunctions.h  Enemy.cpp  Enemy.h  Main.cpp  Main.h  Player.cpp  Player.h
